euphony/static/css/settings.css
@import url('https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap');

*{
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  list-style: none;
  text-decoration: none;
}

 #logo {  
  text-align: center;  
  }  

.hero{
  position: fixed; 
  top: 0; 
  left: 0; 

  min-width: 100%;
  min-height: 100%;
  background-image: linear-gradient(to bottom right, #552586, #B589D6);
}

.title{
  color: white;
  padding-top: 0%;
  font-size: large;
}

.info{
  color: white;
  padding-top: 2%;
}

.wrapper{
  display: flex;
  position: relative;
}

.wrapper .sidebar{
  width: 200px;
  height: 100%;
  background: #212529;
  padding: 80px 0px;
  position: fixed;
}

.wrapper .sidebar .base_setting_h2{
  color: #fff;
  text-transform: uppercase;
  text-align: center;
  margin-bottom: 30px;
}

.wrapper .sidebar .base_setting_ul .base_setting_li{
  padding: 8%;
  border-bottom: 1px solid #bdb8d7;
  border-bottom: 1px solid rgba(0,0,0,0.05);
  border-top: 1px solid rgba(255,255,255,0.05);
}    

.wrapper .sidebar .base_setting_ul .base_setting_li .base_setting_a{
  color: #bdb8d7;
  display: block;
}

.wrapper .sidebar .base_setting_ul .base_setting_li .base_setting_a .fas{
  width: 25px;
}

.wrapper .sidebar .base_setting_ul .base_setting_li:hover{
  background-color: #212529;
}
    
.wrapper .sidebar .base_setting_ul .base_setting_li:hover .base_setting_a{
  color: #fff;
}
 
.wrapper .sidebar .social_media{
  position: absolute;
  bottom: 0;
  left: 50%;
  transform: translateX(-50%);
  display: flex;
}

.username_spacing{
  padding-top: 50px;
}

.settings_name{
    padding-top: 10px;
    position: absolute;
    right: 37%;
    text-align: center;
    /* border: 3px solid green; */
    font-weight: bold;
    font-size: 40px;
    padding-bottom: 10px;
}

.settings_reset_password{
    position: absolute;
    padding-top: 100px;
    padding-right: 100px;
    left: 500px;
}

.info{
    padding-top: 80px;
    margin-bottom: 10px;
    position: absolute;
    right: 39%;
    text-align: center;
}

.info-general{
    padding-top: 80px;
    position: absolute;
    right: 44%;
    text-align: center;
}

.main_content {
  position: relative;
  height: 100%;
}

.form-control{
  padding-left: 20px;
}

.account_settings_save{
  position: absolute;
  right: 26%;
}

.password_reset_save{
  position: absolute;
  padding-left: 110px;
}

.passwordSettingMessage{
  position: absolute;
  padding-top: 50px;
  padding-right: 110px;
}

.userName{
  position: absolute;
  padding-right: 390px;
}


.settingsInfo{
  display: inline-block;
  width: 110px;
  color: #777777;
  padding-bottom: 40px;
 }

.settingsInput{
  padding: 5px 10px;
}

.settingMessage{
  padding-top: 80px;
  padding-left: 25px;
}

.reset_password_button{
  padding-left: 85px;
  padding-bottom: 30px;
}

.reset_password{
  padding-right: 1000px;
  padding-bottom: 300px;
  min-width: 200px;
}

.btn{
  min-width: 100px;
}

.general_settings_switch {
  padding-bottom: 20px;
}

.profile-pic{
  max-width: 100px;
  max-height:100px;
  margin: 0 auto;
  border-radius: 50%;
}

@media only screen and (max-width: 880px) {

  .base_setting_h2{
  font-size: 10px;
  }

  .sidebar{
    max-width: 70px;
  }  

  .base_setting_ul{
    margin: 0 auto;
    padding-left: 1px;
  }

  .info{
    left: 120px;
  }

  .settings_name{
    left: 35%;
  }

  .info-general{
    padding-top: 130px;
    right: 35%;
  }

  .username_spacing{
    padding-top: 140px;
  }

